--- a/main.ui
+++ b/main.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>602</width>
-    <height>309</height>
+    <height>283</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,8 +22,8 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>551</width>
-      <height>231</height>
+      <width>601</width>
+      <height>261</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -45,58 +45,59 @@
         <attribute name="title">
          <string>Users</string>
         </attribute>
-        <widget class="QListView" name="lstUsers">
+        <widget class="QWidget" name="verticalLayoutWidget_3">
          <property name="geometry">
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>531</width>
-           <height>161</height>
+           <width>591</width>
+           <height>231</height>
           </rect>
          </property>
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="frameShape">
-          <enum>QFrame::StyledPanel</enum>
-         </property>
-         <property name="frameShadow">
-          <enum>QFrame::Sunken</enum>
-         </property>
-        </widget>
-        <widget class="QWidget" name="horizontalLayoutWidget">
-         <property name="geometry">
-          <rect>
-           <x>270</x>
-           <y>170</y>
-           <width>258</width>
-           <height>29</height>
-          </rect>
-         </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <layout class="QVBoxLayout" name="verticalLayout_3">
+          <property name="sizeConstraint">
+           <enum>QLayout::SetMaximumSize</enum>
+          </property>
           <item>
-           <widget class="QPushButton" name="btnAddUser">
-            <property name="text">
-             <string>Add user</string>
-            </property>
-           </widget>
+           <widget class="QListView" name="lstUsers"/>
           </item>
           <item>
-           <widget class="QPushButton" name="btnEditUser">
-            <property name="text">
-             <string>Edit user</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="btnDelUser">
-            <property name="text">
-             <string>Delete user</string>
-            </property>
-           </widget>
+           <layout class="QHBoxLayout" name="horizontalLayout_2">
+            <item>
+             <spacer name="horizontalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btnAddUser">
+              <property name="text">
+               <string>Add user</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btnEditUser">
+              <property name="text">
+               <string>Edit user</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btnDelUser">
+              <property name="text">
+               <string>Delete user</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
          </layout>
         </widget>
@@ -105,6 +106,83 @@
         <attribute name="title">
          <string>Groups</string>
         </attribute>
+        <widget class="QWidget" name="verticalLayoutWidget_2">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>591</width>
+           <height>231</height>
+          </rect>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_2">
+          <property name="sizeConstraint">
+           <enum>QLayout::SetMaximumSize</enum>
+          </property>
+          <item>
+           <widget class="QTreeWidget" name="treeGroups">
+            <property name="textElideMode">
+             <enum>Qt::ElideRight</enum>
+            </property>
+            <property name="rootIsDecorated">
+             <bool>true</bool>
+            </property>
+            <property name="columnCount">
+             <number>1</number>
+            </property>
+            <attribute name="headerVisible">
+             <bool>false</bool>
+            </attribute>
+            <column>
+             <property name="text">
+              <string notr="true">1</string>
+             </property>
+            </column>
+           </widget>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_3">
+            <item>
+             <spacer name="horizontalSpacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btnGroupAdd">
+              <property name="text">
+               <string>Add group</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btnGroupEdit">
+              <property name="text">
+               <string>Edit group</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btnGroupDelete">
+              <property name="text">
+               <string>Delete group</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout"/>
+          </item>
+         </layout>
+        </widget>
        </widget>
       </widget>
      </item>
@@ -128,7 +206,6 @@
    </widget>
    <addaction name="menuF_ile"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
   <action name="action_Exit">
    <property name="text">
     <string>&amp;Exit</string>
@@ -144,8 +221,8 @@
    <slot>add_user()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>326</x>
-     <y>232</y>
+     <x>419</x>
+     <y>276</y>
     </hint>
     <hint type="destinationlabel">
      <x>367</x>
@@ -160,12 +237,12 @@
    <slot>delete_user()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>468</x>
-     <y>228</y>
+     <x>591</x>
+     <y>276</y>
     </hint>
     <hint type="destinationlabel">
      <x>469</x>
-     <y>279</y>
+     <y>275</y>
     </hint>
    </hints>
   </connection>
@@ -176,12 +253,76 @@
    <slot>edit_user()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>403</x>
-     <y>234</y>
+     <x>500</x>
+     <y>276</y>
     </hint>
     <hint type="destinationlabel">
      <x>418</x>
      <y>263</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnGroupAdd</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>add_group()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>377</x>
+     <y>262</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>376</x>
+     <y>275</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnGroupEdit</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>edit_group()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>446</x>
+     <y>256</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>446</x>
+     <y>275</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnGroupDelete</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>delete_group()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>535</x>
+     <y>258</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>537</x>
+     <y>275</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>tabWidget</sender>
+   <signal>currentChanged(QWidget*)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>tab_changed(QWidget*)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>71</x>
+     <y>257</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>71</x>
+     <y>275</y>
     </hint>
    </hints>
   </connection>
@@ -190,5 +331,9 @@
   <slot>add_user()</slot>
   <slot>delete_user()</slot>
   <slot>edit_user()</slot>
+  <slot>add_group()</slot>
+  <slot>edit_group()</slot>
+  <slot>delete_group()</slot>
+  <slot>tab_changed(QWidget*)</slot>
  </slots>
 </ui>
