--- a/groups.ui
+++ b/groups.ui
@@ -84,7 +84,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QListWidget" name="listWidget"/>
+       <widget class="QListWidget" name="lstUsrAvail"/>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -105,7 +105,7 @@
        </layout>
       </item>
       <item>
-       <widget class="QListWidget" name="listWidget_2"/>
+       <widget class="QListWidget" name="lstUsrIn"/>
       </item>
      </layout>
     </item>
